# Robotics

Module_1/: README.md  read.me
Module_2/: README.md  read.me
Module_2/ex01/: read.me
Module_2/ex03/: package.xml  read.me
Module_2/ex04/: colcon_build.txt
Module_2/ex05/: rosnode_info.txt  rosnode_list.txt
Module_2/ex06/: read.me
Module_2/ex07/: rosservice_list.txt
Module_2/ex08/: read.me  rqt_console.txt  three_turtles.launch
Module_2/ex09/: CMakeLists.txt  package.xml  read.me  setup.py
Module_2/ex10/: package.xml  read.me  setup.cfg  setup.py  video.txt
Module_3/: README.md
Module_3/ex01/: read.me  video
Module_3/ex02/: read.me  video.txt
Module_3/ex02/action_turtle_commands/: CMakeLists.txt  package.xml
Module_3/ex03/: pose_speed_x1.yaml  pose_speed_x2.yaml  video.txt
Module_3/ex04/: doctor.txt
Module_3/ex05/: read.me  video.txt
Module_4/: README.md  read.me
Module_4/ex01/: transform.txt
Module_4/ex02/: video_rviz.txt  video_turtle.txt
Module_4/ex03/: video.txt
Module_5/: README.md
Module_5/ex01/: read.me  robot.urdf  video.txt
Module_5/ex02/: robot.urdf.xacro
Module_5/ex03/: read.me  video_keyboard.txt  video_panel.txt
Module_5/ex04/: video.txt
Module_5/ex05/: read.me  video.txt
Module_5/lightning_mcqueen/: package.xml
Module_6/: README.md
Module_6/ex01/: video.txt
Module_6/ex02/: video.txt
Module_6/ex03/: video.txt
Module_6/ex04_ex05/: read.me  video_ex04.txt  video_ex05.txt
ex00/: read.me
ex01/: .bashrc  commands.txt  ex01.txt  read.me
ex04/: read.me
ex06/: cmd_vel.txt
ex07/: read.me
(+45 files in other folders)
